--- a/08.JS-Applications/08.Remote Data and Authentication - Exercise/05.Fisher-Game/src/login.html
+++ b/08.JS-Applications/08.Remote Data and Authentication - Exercise/05.Fisher-Game/src/login.html
@@ -22,7 +22,7 @@
                 <a id="login" href="login.html">Login</a>
                 <a id="register" href="register.html">Register</a>
             </div>
-            <p class="email">Welcome, <span>guest</span></p>
+            <p class="email">Welcome, <span id="user-span">guest</span></p>
         </nav>
     </header>
     <main>
