--- a/08.JS-Applications/10.Single Page Applications - Exercise/02.Movies/index.html
+++ b/08.JS-Applications/10.Single Page Applications - Exercise/02.Movies/index.html
@@ -76,7 +76,7 @@
     </section>
 
     <section id="movie-example" class="view-section">
-    <div class="container">
+    <div class="container movie-container">
         <div class="row bg-light text-dark">
             <h1>Movie title: Black Widow</h1>
 
